--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,17 +10,23 @@ environment:
 dependencies:
   bloc: ^8.1.0
   equatable: ^2.0.5
+  firebase_core: ^1.23.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
+  freezed_annotation: ^2.1.0
   intl: ^0.17.0
+  json_annotation: ^4.7.0
 
 dev_dependencies:
   bloc_test: ^9.1.0
+  build_runner: ^2.2.1
   flutter_test:
     sdk: flutter
+  freezed: ^2.1.0+1
+  json_serializable: ^6.4.0
   mocktail: ^0.3.0
   very_good_analysis: ^3.0.2
 
