--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,27 +9,28 @@ environment:
 
 dependencies:
   bloc: ^8.1.0
-  cloud_firestore: ^3.5.0
+  cloud_firestore: ^4.9.0
   equatable: ^2.0.5
-  firebase_core: ^1.23.0
+  firebase_core: ^2.15.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.1
   flutter_localizations:
     sdk: flutter
-  freezed_annotation: ^2.1.0
-  intl: ^0.17.0
+  freezed_annotation: 
+  intl: 
   json_annotation: ^4.7.0
+  rxdart:
 
 dev_dependencies:
   bloc_test: ^9.1.0
   build_runner: ^2.2.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.1.0+1
+  freezed: 
   json_serializable: ^6.4.0
-  mocktail: ^0.3.0
-  very_good_analysis: ^3.0.2
+  mocktail: ^1.0.0
+  very_good_analysis: ^5.0.0+1
 
 flutter:
   uses-material-design: true
